--- a/server/package.json
+++ b/server/package.json
@@ -7,8 +7,8 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
-    "start": "node index",
-    "dev": "nodemon index"
+    "start": "node ./src/index.js",
+    "dev": "nodemon ./src/index.js"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
