--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,8 @@
     "bcrypt": "^6.0.0",
     "dotenv": "^17.2.0",
     "express": "^5.1.0",
-    "mongoose": "^8.16.3"
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.16.3",
+    "resend": "^4.6.0"
   }
 }
