--- a/server/package.json
+++ b/server/package.json
@@ -23,6 +23,7 @@
     "mongoose": "^8.16.3",
     "multer": "^2.0.1",
     "multer-storage-cloudinary": "^4.0.0",
-    "resend": "^4.6.0"
+    "resend": "^4.6.0",
+    "socket.io": "^4.8.1"
   }
 }
