--- a/.github/workflows/client.yml
+++ b/.github/workflows/client.yml
@@ -19,19 +19,25 @@ jobs:
         with:
           submodules: true
           lfs: false
-      - name: Build And Deploy
+
+      # Step 1: Explicitly build the client application
+      - name: Build App
+        run: npm install && npm run build
+        working-directory: ./client # Specify the client directory
+        env:
+          VITE_SERVER_URL: ${{ vars.VITE_SERVER_URL }} # Use the variable from GitHub repository variables
+
+      # Step 2: Deploy the built application
+      - name: Deploy
         id: builddeploy
         uses: Azure/static-web-apps-deploy@v1
         with:
           azure_static_web_apps_api_token: ${{ secrets.AZURE_STATIC_WEB_APPS_API_TOKEN_BRAVE_WAVE_05BB48F00 }}
-          repo_token: ${{ secrets.GITHUB_TOKEN }} # Used for Github integrations (i.e. PR comments)
+          repo_token: ${{ secrets.GITHUB_TOKEN }}
           action: "upload"
-          ###### Repository/Build Configurations - These values can be configured to match your app requirements. ######
-          # For more information regarding Static Web App workflow configurations, please visit: https://aka.ms/swaworkflowconfig
-          app_location: "./client" # App source code path
-          api_location: "" # Api source code path - optional
-          output_location: "dist" # Built app content directory - optional
-          ###### End of Repository/Build Configurations ######
+          app_location: "./client/dist" # Point to the build output directory
+          api_location: ""
+          output_location: "" # This is no longer needed as app_location points to the output
 
   close_pull_request_job:
     if: github.event_name == 'pull_request' && github.event.action == 'closed'
